# vietkey

./: .gitmodules  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  UniKeyJNI.cpp
app/src/main/java/com/vietsmart/key/: KeyboardView.kt  MainActivity.kt  UniKeyEngine.kt  VietSmartKeyboardService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_xml.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: method.xml
